# mktecosystem

./: .gitignore  CLAUDE.md  README.md  e2e-staging-log.txt  railway.json
apps/api/: .env.example  _teste_agenda_criativo_pergunta.py  _teste_aposentadoria_mulher_inserir.py  _teste_bpc_corpo_html.txt  _teste_bpc_gerar.py  _teste_bpc_inserir.py  _teste_bpc_squad_gerar.py  _teste_pergunta_squad_gerar.py  _teste_poll_publicacao_blog.py  alembic.ini  pyproject.toml  railway.json
apps/api/_teste_aposentadoria_mulher_output/: artigo.html
apps/api/_teste_bpc_output/: artigo.html
apps/api/alembic/: env.py
apps/api/app/: config.py  db.py  main.py  scheduler.py
apps/api/tests/: conftest.py  test_agendamento_horario.py  test_ai_gemini.py  test_auth.py  test_avaliacoes.py  test_blog_index_editor.py  test_blog_publisher.py  test_blog_slug.py  test_config_blog_sftp.py  test_content_aprovar.py  test_content_gerar.py  test_content_models.py  test_crypto.py  test_email_campaigns.py  test_email_sender.py  test_google_business_client.py  test_google_business_metrics.py  test_groq_client.py  test_health.py  test_insights.py  test_instagram_metrics.py  test_instagram_publisher.py  test_integracoes_google_business.py  test_integracoes_instagram.py  test_integracoes_token_manual.py  test_onda1.py  test_pautas_router.py  test_public_contacts.py  test_render_artigo_blog.py  test_render_criativo.py  test_resend_client.py  test_resend_webhook.py  test_resumo_diario.py  test_sftp_client.py  test_source_cnj.py  test_source_stf.py  test_source_tst.py  test_tenant_model.py  (+2 more)
(+124 files in other folders)
